Fix alignment on origami model carousel

--- a/Origami/formatting.css
+++ b/Origami/formatting.css
@@ -101,6 +101,7 @@ div.model_list {
   flex-direction: column;
   gap: 1em;
   margin-top: 15pt;
+  align-items: baseline;
 }
 
 .model_list_heading {
